--- a/styles/style.css
+++ b/styles/style.css
@@ -3,69 +3,85 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: 70% 30%;
+    grid-template-rows: 10% 60% 20%;
 }
 
 .header {
     border: 2px solid black;
     grid-row: 1 / 2;
-    grid-column: 1 / 8;
+    grid-column: 1 / 3;
 }
 
 .main {
     border: 2px solid black;
-    grid-row: 2 / 9;
-    grid-column: 1 / 8;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+
+.grid-container1 {
+    border: 2px solid red;
+    margin-top: 100px;
+    grid-template-columns: 50px 50px;
+    grid-template-rows: 100px 100px;
 }
 
 .section1 {
     border: 2px solid black;
-    grid-row: 5 / 6;
-    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 
 .section2 {
     border: 2px solid black;
-    grid-row: 5 / 6;
-    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    grid-column: 2 / 4;
 }
 
 .section3 {
     border: 2px solid black;
-    grid-row: 7 / 8;
-    grid-column: 2 / 5;
+    grid-row: 2 / 4;
+    grid-column: 1 / 4;
 }
 
 .aside {
     border: 2px solid black;
-    grid-row: 2 / 9;
-    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
 }
 
 .footer {
     border: 2px solid black;
-    grid-row: 9 / 12;
-    grid-column: 1 / 8;
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+}
+
+.grid-container2 {
+    border: 2px solid green;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 .ftrsection1 {
     border: 2px solid black;
-    grid-row: ;
-    grid-column: ;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 
 .ftrsection2 {
     border: 2px solid black;
-    grid-column: ;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
 }
 
 .ftrsection3 {
     border: 2px solid black;
-    grid-column: ;
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
 }
 
 .ftrsection4 {
     border: 2px solid black;
-    grid-column: ;
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
 }
