--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 10% 60% 20%;
+    grid-template-rows: 80px 350px 80px;
 }
 
 .header {
@@ -58,6 +58,7 @@
 
 .grid-container2 {
     border: 2px solid green;
+    height: 150px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
 }
